--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -23,7 +23,7 @@
   \centerline{The University of Queensland}\vfill
   \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
   \centerline{School of Mathematical and Computational Sciences}\medskip
-  \centerline{University of St.~Andrews, North Haugh, St~Andrews,
+  \centerline{University of St~Andrews, North Haugh, St~Andrews,
               Fife KY16 9SS, Scotland}
 }
 %
