--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -33,11 +33,11 @@ your version of {\GAP}~4. (This might be the `pkg' directory of the
 {\GAP}~4 home directory; it is however also possible to keep an additional
 `pkg' directory in you private directories, see section "ref:Installing
 Share Packages" of the {\GAP}~4 reference manual for details on how to do
-this.) Go to the newly created `ACE' directory and call `configure <path>'
+this.) Go to the newly created `ACE' directory and call `./configure <path>'
 where <path> is the path to the {\GAP} home directory. So for example if you
 install the package in the main `pkg' directory call
 \begintt
-configure ../..
+./configure ../..
 \endtt
 This will fetch the architecture type for which {\GAP} has been compiled last
 and create a `Makefile'. 
