Additions by George. AH

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -5,7 +5,6 @@
 %H  $Id$
 %%
 %%
-
 \input ../../../doc/gapmacro
 
 \BeginningOfBook{ace}
@@ -19,7 +18,9 @@
   \centerline{\titlefont ACE}\vfill
   \centerline{\secfont by}\vfill
   \centerline{\secfont George Havas and Colin Ramsay,}\medskip
-  \centerline{\secfont Department of Computer Science,}\medskip
+  \centerline{Centre for Discrete Mathematics and Computing,} \medskip
+  \centerline{Department of Computer Science and Electrical Engineering,}
+  \medskip
   \centerline{The University of Queensland}\vfill
   \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
   \centerline{School of Mathematical and Computational Sciences}\medskip
