Documenation quirks, added `builddoc' target for myself.

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -9,9 +9,6 @@
 
 \BeginningOfBook{ace}
 
-\UseReferences{../../../doc/ext}
-\UseReferences{../../../doc/ref}
-
 \TitlePage{
   \centerline{\titlefont Share Package}\medskip
   \centerline{\titlefont ---}\medskip
@@ -23,7 +20,7 @@
   \medskip
   \centerline{The University of Queensland}\vfill
   \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
-  \centerline{School of Mathematical and Computational Sciences}\medskip
+  \centerline{School of Mathematical and Computational Sciences,}\medskip
   \centerline{University of St~Andrews, North Haugh, St~Andrews,
               Fife KY16 9SS, Scotland}
 }
