--- a/README
+++ b/README
@@ -1,16 +1,16 @@
 	                 The ACE share package
 
-The ACE share package permits to call the Adaptive Coset Enumerator written
+The ACE share package permits to call the Advanced Coset Enumerator written
 by George Havas and Colin Ramsay from within GAP. 
 
 ACE coset enumerator (C) 1995-1998 by George Havas and Colin Ramsay
-    http://www.it.uq.edu.au/~havas/ace2.tar.gz
+    http://www.it.uq.edu.au/~havas/ace3.tar.gz
 
 The GAP interface has been written by Alexander Hulpke.
 
 The package interfaces to an external binary and therefore is only usable
 under UNIX. It will not work on Windows or the Macintosh. It requires
-GAP 4 in at least beta version 5.
+GAP 4.
 
 
 		Installing the ACE share package
