--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 The ACE share package permits to call the Advanced Coset Enumerator written
 by George Havas and Colin Ramsay from within GAP. 
 
-ACE coset enumerator (C) 1995-1998 by George Havas and Colin Ramsay
+ACE coset enumerator (C) 1995-1999 by George Havas and Colin Ramsay
     http://www.it.uq.edu.au/~havas/ace3.tar.gz
 
 The GAP interface has been written by Alexander Hulpke.
@@ -33,6 +33,11 @@ Now simply call
   make
 
 to compile the binary and to install it in the appropriate place.
+
+Note that the current version of the configuration process only sets up
+directory paths. If you need a different compiler or different compiler
+options, you need to edit `src/Makefile.in' prior to calling `make'
+yourself.
 
 If you use this installation of GAP on different hardware platforms you will
 have to compile the binary for each platform separately. This is done by
