--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -28,8 +28,10 @@
 %
 \TableOfContents
 \FrontMatter
+\immediate\write\citeout{\bs bibdata{mrabbrev,manual}}
 \Chapters
 \Input{ace}
-%\Bibliography
-\Index
+\Appendices
+\Bibliography
+%\Index
 \EndOfBook
