added references and `UseReferences'

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -9,6 +9,14 @@
 
 \BeginningOfBook{ace}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%
+%F  UseReferences . . . . . . . . . . . . . . . . . .  specify references
+%%
+\UseReferences{../../../doc/ext}
+\UseReferences{../../../doc/ref}
+%
+%
 \TitlePage{
   \centerline{\titlefont Share Package}\medskip
   \centerline{\titlefont ---}\medskip
