moved [Hav91] from the ACE bibliography to that of the GAP manual (for being able to cite it also in the ITC manual)

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -36,10 +36,15 @@
 %
 \TableOfContents
 \FrontMatter
-\immediate\write\citeout{\bs bibdata{mrabbrev,manual}}
+\immediate\write\citeout{\bs bibdata{./manual,../../../doc/ref/mrabbrev,../../../doc/manual}}
 \Chapters
 \Input{ace}
 \Appendices
 \Bibliography
 \Index
 \EndOfBook
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%
+%E
+
