*** empty log message ***

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -1,6 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
-%W  manual.tex                ACE documentation
+%W  manual.tex                ACE documentation          Alexander Hulpke
+%W                                                      Joachim Neub"user
+%W                                                            Greg Gamble
 %%
 %H  $Id$
 %%
@@ -26,11 +28,16 @@
   \centerline{Centre for Discrete Mathematics and Computing,} \medskip
   \centerline{Department of Computer Science and Electrical Engineering,}
   \medskip
-  \centerline{The University of Queensland}\vfill
+  \centerline{The University of Queensland, St.~Lucia 4072, Australia}\vfill
   \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
   \centerline{School of Mathematical and Computational Sciences,}\medskip
   \centerline{University of St~Andrews, North Haugh, St~Andrews,
               Fife KY16 9SS, Scotland}
+  \centerline{and Greg Gamble,}\medskip
+  \centerline{Centre for Discrete Mathematics and Computing,} \medskip
+  \centerline{Department of Computer Science and Electrical Engineering,}
+  \medskip
+  \centerline{The University of Queensland, St.~Lucia 4072, Australia}
 }
 %
 %
