--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -32,7 +32,7 @@
   \centerline{{\GAP} interface by Alexander Hulpke,}\medskip
   \centerline{School of Mathematical and Computational Sciences,}\medskip
   \centerline{University of St~Andrews, North Haugh, St~Andrews,
-              Fife KY16 9SS, Scotland}
+              Fife KY16 9SS, Scotland}\medskip
   \centerline{and Greg Gamble,}\medskip
   \centerline{Centre for Discrete Mathematics and Computing,} \medskip
   \centerline{Department of Computer Science and Electrical Engineering,}
