Straightened some citatiuons. AH

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -1193,7 +1193,7 @@ potentially called).
     that every  $1000$ C-style definitions  a further coset is  applied to
     all  relators.*Guru  Notes:*  The  $1000/1$  mix  is  not  necessarily
     optimal, and some experimentation may  be needed to find an acceptable
-    balance (see,  for example, \cite{HR1}).   Note also that,  the longer
+    balance (see,  for example, \cite{HR99}).   Note also that,  the longer
     the total length  of the presentation, the more work  needs to be done
     for each coset application to  the relators; one coset application can
     result in more than  $1000$ definitions, reversing the balance between
@@ -1466,8 +1466,8 @@ are left `unchanged' by running the `aep' option.
 
 Use  with  the  `mess' option  to  see  the  result. 
 
-As discussed by Cannon, Dimino, Havas and Watson \cite{CDHW} and Havas
-and Ramsay  \cite{HR1} such  equivalent presentations can  yield large
+As discussed by Cannon, Dimino, Havas and Watson \cite{CDHW73} and Havas
+and Ramsay  \cite{HR99} such  equivalent presentations can  yield large
 variations in  the number of  cosets required in an  enumeration.  For
 this command, we are interested in this variation.
 
@@ -1481,7 +1481,7 @@ At the end, some additional status information is printed:
 \endlist
 
 
-As an example (drawn from the discussion in \cite{HR1}) consider the index
+As an example (drawn from the discussion in \cite{HR99}) consider the index
   $448$ enumeration of $(8,7 \mid 2,3) / \langle a^2,Ab \rangle$,
   where $$ (8,7 \mid 2,3) 
     = \langle a,b \mid a^8 = b^7 = (ab)^2 = (Ab)^3 = 1 \rangle . $$
