--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -17,7 +17,7 @@ note  = "Draft"}
   PAGES         = {21--35},
 }
 
-@ARTICLE{CDHW,
+@ARTICLE{CDHW73,
   AUTHOR        = {John J. Cannon and Lucien A. Dimino and George Havas
 			and Jane M. Watson},
   TITLE         = {Implementation and analysis of the {Todd-Coxeter}
@@ -125,10 +125,9 @@ note  = "Draft"}
 @MISC{C11,
   KEY		= {Group-pub-forum},
   NOTE          = {Group-pub-forum e-mail list
-		     (\texttt{group-pub-forum@maths.bath.ac.uk}),
+		     (`group-pub-forum@maths.bath.ac.uk'),
 		   Problem 11, 1996.
-		   See \texttt{http://www2.bath.ac.uk/}%
-\verb+~+\texttt{masgcs/problem/problem11.htm}}
+		   See \URL{http://www2.bath.ac.uk/~masgcs/problem/problem11.htm}}
 }
 
 @MISC{HHKR,
@@ -138,11 +137,10 @@ note  = "Draft"}
   YEAR          = {1999 (preprint)}
 }
 
-@MISC{HR,
+@MISC{HR99a,
   AUTHOR	= {George Havas and Colin Ramsay},
   TITLE		= {Coset enumeration: {ACE} version 3, 1999},
-  NOTE		= {Available as \texttt{http://www.csee.uq.edu.au/}%
-\verb+~+\texttt{havas/ace3.tar.gz}}
+  NOTE		= {Available as \URL{http://www.csee.uq.edu.au/~havas/ace3.tar.gz}}
 }
 
 @INCOLLECTION{KB,
@@ -264,7 +262,7 @@ note  = "Draft"}
   YEAR          = {1901}
 }
 
-@TECHREPORT{HR1,
+@TECHREPORT{HR99,
   AUTHOR        = {George Havas and Colin Ramsay},
   TITLE         = {Experiments in coset enumeration},
   INSTITUTION   = {Centre for Discrete Mathematics and Computing},
