changed in citations: something renamed and moved to the `manual.bib' file of the GAP `doc' directory, for allowing one to cite it from within the ITC manual. (I hope this does not conflict with Alexander's recent changes ...)

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -220,8 +220,8 @@ since {\GAP} does not have data structures for such incomplete tables.
 
 Large parts of  this manual, in particular      the description of the
 options for  running {\ACE}, are  directly copied from  the respective
-description in  the manual \cite{HR99a} for the  standalone version of
-{\ACE} by George Havas and Colin Ramsay.
+description in  the manual~\cite{Ram99} for the  standalone version of
+{\ACE} by Colin Ramsay.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Chapter{Installing and Loading the ACE Share Package}
@@ -271,7 +271,7 @@ share package; it can be found in the `doc' subdirectory of the package.
 
 The subdirectory `standalone-doc' contains the file `ace3001.dvi' which
 holds a version of the user manual for the {\ACE} standalone; it  forms
-part of~\cite{HR99a}). You should consult it if you are going to switch
+part of~\cite{Ram99a}). You should consult it if you are going to switch
 to the {\ACE} standalone, e.g.~in order to use interactive facilities.
 
 The  `src' subdirectory  contains a  copy  of the  original source  of
@@ -311,8 +311,8 @@ condition leaves room for a great variety of \lq strategies' for coset
 enumeration; two \lq classical' ones, have been known for a long  time
 as the \lq Felsch  strategy' and the \lq HLT strategy' (for Haselgrove,
 Leech  and Trotter). Extensive experimental studies on many strategies
-can  be  found  in \cite{CDHW73},  \cite{Hav91}, and  \cite{HR99},  in 
-particular.
+can  be  found  in \cite{CDHW73},  \cite{Hav91}, \cite{HR99a},
+and \cite{HR99b} in particular.
 
 A few basic points  should be particularly understood:
 
